tried fixing the nav bar overflow on small screens

--- a/sass/components/_nav-wrapper.scss
+++ b/sass/components/_nav-wrapper.scss
@@ -2,6 +2,7 @@
   position: fixed;
   top: 0;
   left: 0;
+  overflow: hidden;
   height: 50px;
   width: 100%;
   display: flex;
